<resources>
    <string name="app_name" translatable="false">Job4j Exam</string>
    <string name="hello" translatable="false">Hello, Yuriy Nekhodov!</string>
    <string name="radio_button1">Переключатель1</string>
    <string name="radio_button2">Переключатель2</string>
    <string name="radio_button3">Переключатель3</string>
    <string name="radio_button4">Переключатель4</string>
    <string name="next_button" translatable="false">Next</string>
    <string name="back_button" translatable="false">Back</string>

    <string name="domain_prompt">Выберите область</string>
    <string name="exp_date">Дата проведения испытания</string>
    <string-array name="domain_arrays">
        <item>Выберите область</item>
        <item>Московская</item>
        <item>СПб</item>
    </string-array>

    <string name="data_prompt">Выберите дату</string>
    <string name="domain">Регион</string>
    <string name="object_name">Имя объекта</string>
    <string name="street_and_house">Улица и дом</string>
    <string name="customer_name">ФИО заказчика</string>
    <string name="air_temp">Температура воздуха</string>
    <string name="air_humidity">Влажность воздуха</string>
    <string name="atmospheric_pressure">Атмосферное давление</string>
    <string name="report_number">Номер отчёта</string>
    <string name="report_date">Дата отчета</string>
    <string name="hint" translatable="false">Hint</string>
    <string name="test_result" translatable="false">Test results:</string>
    <string name="count_questions" translatable="false">Count of the questions</string>
    <string name="correct_answers" translatable="false">Correct answers:</string>
    <string name="message_text">Message text</string>
    <string name="result_button" translatable="false">Results</string>
    <string-array name="data_arrays">
        <item>Выберите дату</item>
        <item>01.03.20</item>
        <item>02.03.20</item>
        <item>04.03.20</item>
        <item>05.03.20</item>
        <item>06.03.20</item>
    </string-array>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="return_to_exam_list" translatable="false">To exam list</string>
    <string name="dialog_question">Show hint?</string>
    <string name="add_item">Add</string>
    <string name="delete_item">Delete all</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="exam_name">Exam name:</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="completion_date">Completion date:</string>
    <string name="sample_date">29.04.20</string>
    <string name="sample_result">78</string>
    <string name="total_questions">Total questions:</string>
    <string name="not_passed">Not passed</string>

    <string name="java_basic_name">Java Basic Exam</string>
    <string name="java_basic_desc"> </string>
    <string name="show_hint">Show hint?</string>
    <string name="clear_progress">Clear your progress?</string>
    <string name="to_exam_list">To exam list</string>
    <string name="pass_again">Pass again</string>
</resources>
