<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/test_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_result" />

    <TextView
        android:id="@+id/count_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_questions" />

    <TextView
        android:id="@+id/correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers" />
</LinearLayout>